--- a/css/main.css
+++ b/css/main.css
@@ -1,121 +1,230 @@
-/* body */
+/* global */
+
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  vertical-align: baseline;
-}
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-html, body {
-  height: 100%;
-  margin: 0;
-}
-body {
-  font-family: "Segoe UI", sans-serif;
-  color: #FFF;
-  border: 1px solid #48545c;
-  overflow-y: hidden;
-}
-.title {
-  margin: 0 0 10px 0;
-  font-weight: 600;
-  line-height: 1.2;
-  text-align:center;
-}
-.center {
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-p {
-  margin-top: 10px;
-}
-.grey{
-  color: rgba(150, 150, 150);
-}
-#main {
-  background: url("file:///img/scanlines.png");
-  background-size: 150px;
-  height: calc(100% - 32px);
-  margin-top: 32px;
-  padding: 20px;
-  overflow-y: auto;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
 }
 
+html {
+	box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+
+html,
+body {
+	height: 100%;
+	margin: 0;
+}
+
+body {
+	font-family: "Segoe UI", sans-serif;
+	color: #FFF;
+	border: 1px solid #48545c;
+	overflow-y: hidden;
+}
+
+p {
+	margin-top: 10px;
+}
+
+#main {
+	background: url("file:///img/scanlines.png");
+	background-size: 150px;
+	height: calc(100% - 32px);
+	position: relative;
+	margin-top: 32px;
+	padding: 20px;
+	overflow-y: auto;
+}
+
+
 /*Top bar thingy*/
+
 #titlebar {
-  display: block;
-  position: fixed;
-  height: 32px;
-  width: calc(100% - 2px); /*Compensate for body 1px border*/
-  background: #254053;
-  padding: 4px;
-  color: #FFF;
+	display: block;
+	position: fixed;
+	height: 32px;
+	width: calc(100% - 2px);
+	/*Compensate for body 1px border*/
+	background: #254053;
+	padding: 4px;
+	color: #FFF;
 }
+
 #titlebar #drag-region {
-  width: 100%;
-  height: 100%;
-  -webkit-app-region: drag;
-  display: grid;
-  grid-template-columns: auto 138px;
+	width: 100%;
+	height: 100%;
+	-webkit-app-region: drag;
+	display: grid;
+	grid-template-columns: auto 138px;
 }
+
 #window-title {
-  grid-column: 1;
-  display: flex;
-  align-items: center;
-  font-family: "Segoe UI", sans-serif;
-  font-size: 12px;
-  margin-left: 8px;
-  overflow-x: hidden;
+	grid-column: 1;
+	display: flex;
+	align-items: center;
+	font-family: "Segoe UI", sans-serif;
+	font-size: 12px;
+	margin-left: 8px;
+	overflow-x: hidden;
 }
+
 #window-title span {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  line-height: 1.5;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	line-height: 1.5;
 }
+
 #window-controls {
-  -webkit-app-region: no-drag;
-  display: grid;
-  grid-template-columns: repeat(3, 46px);
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100%;
-  font-family: "Segoe MDL2 Assets";
-  font-size: 10px;
+	-webkit-app-region: no-drag;
+	display: grid;
+	grid-template-columns: repeat(3, 46px);
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	font-family: "Segoe MDL2 Assets";
+	font-size: 10px;
 }
+
 #window-controls .button {
-  grid-row: 1 / span 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  user-select: none;
-  cursor: default;
-  opacity: 0.8;
+	grid-row: 1 / span 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	user-select: none;
+	cursor: default;
+	opacity: .8;
 }
+
 #window-controls .button:hover {
-  background: rgba(255,255,255,0.2);
-  opacity: 1;
+	background: rgba(255, 255, 255, .2);
+	opacity: 1;
 }
+
 #window-controls #min-button {
-  grid-column: 1;
+	grid-column: 1;
 }
-#window-controls #max-button, #window-controls #restore-button {
-  grid-column: 2;
-}
+
+#window-controls #max-button,
 #window-controls #restore-button {
-  display: none;
+	grid-column: 2;
 }
+
+#window-controls #restore-button {
+	display: none;
+}
+
 #window-controls #close-button {
-  grid-column: 3;
+	grid-column: 3;
 }
+
 #window-controls #close-button:hover {
-  background: #E81123;
+	background: #E81123;
+}
+
+
+/* Others */
+
+.title {
+	margin: 0 0 10px 0;
+	font-weight: 600;
+	line-height: 1.2;
+	text-align: center;
+}
+
+.center {
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+
+.grey {
+	color: rgba(150, 150, 150);
+}
+
+.button_1 {
+	border-radius: 4px;
+	background-color: #f4511e;
+	border: none;
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 28px;
+	padding: 20px;
+	width: 200px;
+	cursor: pointer;
+	margin: 5px;
+}
+
+.button_1 span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: .5s;
+}
+
+.button_1 span:after {
+	content: '?';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	transition: .5s;
+}
+
+.button_1:hover span {
+  padding-right: 1ch;
+}
+
+.button_1:hover span:after {
+	opacity: 1;
+}
+
+.button_1:active {
+  transition: .1s;
+  background: rgba(0, 0, 0, .5)
+}
+
+#save {
+	background-color: rgb(0, 162, 0);
+}
+
+#save:active {
+	background-color: rgb(0, 112, 0);
+}
+
+.notification {
+  width: 100px;
+  height: 40px;
+	right: 30px;
+  top: 30px;
+	padding: 6px;
+	text-align: center;
+  position: absolute;
+	box-shadow: 10px 10px 5px rgba(0, 0, 0, .5);
+  background-color: rgb(80, 80, 80);
+  animation-name: notification;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
+.notification span {
+	color: rgba(255, 255, 255, .8);
+	top: 0;
+	display: inline-block;
+	position: relative;
+}
+
+@keyframes notification {
+  0% {top: -100px;}
+  50% {top: 30px;}
+  75% {opacity: 1;}
+  100% {opacity: 0;}
 }
